opam-version: "2.0"

homepage: "http://github.com/odis-labs/slices"
doc: "https://odis-labs.github.io/slices"
bug-reports: "https://github.com/odis-labs/slices/issues"
license: "ISC"

authors: [
  "Rizo I <rizo@odis.io>"
]
maintainer: "Rizo I <rizo@odis.io>"
dev-repo: "git+https://github.com/odis-labs/slices.git"

synopsis: "Fast, safe and composable views for array-like containers"
description: """
Slices are views into subsequences of elements.
"""

depends: [
  "stdlib-shims"
  "dune" {>= "2.0"}
  "ocaml" {>= "4.08.0"}
]

build: [
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc}]
]
